<resources>
    <string name="app_name">XFiles</string>
    <string name="tag_fragment_FileSelect">Select file</string>
    <string name="alert_file_select">Select file</string>
    <string name="select_all">Select\nall</string>
    <string name="select_none">Select\nnone</string>
    <string name="invert_selection">Invert\nselection</string>
    <string name="filter_selection">Filter\nselection</string>
    <string name="filter_deselection">Filter\ndeselection</string>
    <string name="alert_supply_filename">Please supply a valid filename</string>
    <string name="alert_bad_filename_chars">Characters not allowed in filename</string>
    <string name="alert_file_exists">File already exists, please choose a different name</string>
    <string name="tag_fragment_FileSave">Save file</string>
    <string name="edit_hint">Insert file name</string>
    <string name="empty_string" />
    <string name="start_rhss_description">Click on the main button to start/stop the remote RH server; additionally you can manage WiFi and WiFi hotspot status</string>
    <string name="ssh_default_port">22</string>
    <string name="smb_default_port">445</string>
    <string name="smb_default_domain">WORKGROUP</string>
    <string name="dest_archive_filename_header">archive</string>
    <string name="checksums_export_filename_header">checksums</string>
    <string name="serve_only_current_directory">Serve only current directory:</string>
    <string name="send_xre_announce">Send XRE server announce</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="permission_storage_explain">XFiles is a file explorer, so it obviously needs permissions to access storage. Without this permission, the app will not start</string>
    <string name="permission_notifs13_explain">On Android 13+, this permission is required for showing progress in foreground services, and for showing toast messages when no activity is active. Without this permission, the app will not start</string>
    <string name="permission_sysSettings_explain"><![CDATA[Optional permission, on devices < Android Oreo it allows to toggle the hotspot state without having to open the system UI every time]]></string>
    <string name="permission_overlay_explain">Optional permission, on file transfers it allows to show an overlay with progress bars (otherwise you would have to check from the service foreground notification)</string>
    <string name="close">Close</string>
    <string name="active_servers_on_close_explain">Some remote servers are currently active. You can close them from here if needed, and then press Back once more to exit. Any active transfers will be canceled if servers are closed</string>
    <string name="permission_extsd_explain">Optional permission, for devices having external memory card, requests write access (you have to manually pick the external SD card from the file browser that opens)</string>
    <string name="permission_install_unknown_apps_explain">Optional permission, from Oreo onwards, Android will block installation of apk files opened within XFiles, even if \"Install apps from unknown sources\" global setting is enabled. Granting this permission will allow apks installation from this app</string>
    <string name="storage_perm_denied">Storage permissions denied</string>
    <string name="storage_read_perm_denied">Storage READ permissions denied</string>
    <string name="storage_perm_granted">Storage permissions granted</string>
    <string name="storage_read_perm_granted">Storage READ permissions granted</string>
    <string name="app_about_desc">A general-purpose file explorer for Android</string>
    <string name="appWebsite">https://github.com/pgp/XFiles</string>
    <string name="alwaysCreateSubdirectory">Always create subdirectory</string>
    <string name="neverCreateSubdirectory">Never create subdirectory</string>
    <string name="smartCreateSubdirectory">Smart subdirectory creation</string>
    <string name="ftp_server">FTP Server</string>
    <string name="http_server">HTTP Server</string>
    <string name="active_ip_addresses">Active IP addresses</string>
</resources>
